--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.17.3",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.8"
   },
